--- a/configs/config.cfg
+++ b/configs/config.cfg
@@ -1,5 +1,5 @@
 [Directory]
-root_dir = /home/UserGroup/UserName/Building_Detection/cropped_aerial_torch_512
+root_dir = E:\WHU Building Datase
 save_dir = ${root_dir}/save
 log_dir = ${save_dir}/log
 test_dir = ${save_dir}/test
@@ -16,6 +16,8 @@ batch_size = 16
 nb_classes = 2
 original_size = 512
 cropped_size = 256
+step_x = 128
+step_y = 128
 input_size = 512
 overlapped = 0
 
@@ -41,8 +43,8 @@ loss = crossentropy
 pre_trained = False
 visualization = True
 verbosity = 2
-early_stop = 10
-save_period = 10
+early_stop = 3
+save_period = 2
 dis_period = 20
-epochs = 300
+epochs = 3
 
